--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "SET NODE_ENV=local && node app5.js"
+    "start": "SET NODE_ENV=local && node app5.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongodb": "^5.8.0",
-    "mongoose": "^7.4.4"
+    "mongoose": "^7.4.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
